sample/error/e03008.asn
E03008 DEFINITIONS ::=
BEGIN
    MyChoice ::= [0] IMPLICIT CHOICE {  -- E03008
        a   INTEGER,
        b   BOOLEAN
    }
END
